--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 a {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 a:hover,
@@ -79,7 +79,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #2dc997;
+  background: #ffc107;
   color: #fff;
 }
 
@@ -209,8 +209,8 @@ h6 {
 }
 
 #hero .btn-get-started:hover {
-  background: #2dc997;
-  border: 2px solid #2dc997;
+  background: #ffc107;
+  border: 2px solid #ffc107;
 }
 
 /*--------------------------------------------------------------
@@ -308,7 +308,7 @@ h6 {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #2dc997;
+  background-color: #ffc107;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -346,7 +346,7 @@ h6 {
 }
 
 .nav-menu ul li a:hover {
-  background: #2dc997;
+  background: #ffc107;
   color: #fff;
 }
 
@@ -430,11 +430,11 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #mobile-nav ul .menu-item-active {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #mobile-body-overly {
@@ -546,11 +546,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   flex-direction: column;
   text-align: center;
   border-radius: 50%;
-  border: 2px solid #2dc997;
+  border: 2px solid #ffc107;
 }
 
 #about .about-container .icon-box .icon i {
-  color: #2dc997;
+  color: #ffc107;
   font-size: 24px;
 }
 
@@ -583,7 +583,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #facts .counters span {
   font-size: 48px;
   display: block;
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #facts .counters p {
@@ -639,7 +639,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   width: 72px;
   height: 72px;
-  background: #2dc997;
+  background: #ffc107;
 }
 
 #services .icon a {
@@ -653,15 +653,15 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #services .box:hover .icon {
   background: #fff;
-  border: 2px solid #2dc997;
+  border: 2px solid #ffc107;
 }
 
 #services .box:hover .icon i {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #services .box:hover .icon a {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #services .title {
@@ -715,8 +715,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #call-to-action .cta-btn:hover {
-  background: #2dc997;
-  border: 2px solid #2dc997;
+  background: #ffc107;
+  border: 2px solid #ffc107;
 }
 
 /* Portfolio Section
@@ -755,7 +755,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio #portfolio-flters li:hover,
 #portfolio #portfolio-flters li.filter-active {
-  background: #2dc997;
+  background: #ffc107;
   color: #fff;
 }
 
@@ -782,7 +782,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #portfolio .portfolio-item .details {
   height: 50px;
-  background: #2dc997;
+  background: #ffc107;
   position: absolute;
   width: 100%;
   height: 50px;
@@ -857,7 +857,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member .social a:hover {
-  color: #2dc997;
+  color: #ffc107;
 }
 
 #team .member .social i {
@@ -884,7 +884,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #contact .info i {
   font-size: 32px;
-  color: #2dc997;
+  color: #ffc107;
   float: left;
 }
 
@@ -918,13 +918,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .social-links a:hover {
-  background: #2dc997;
+  background: #ffc107;
   color: #fff;
 }
 
 #contact .form #sendmessage {
-  color: #2dc997;
-  border: 1px solid #2dc997;
+  color: #ffc107;
+  border: 1px solid #ffc107;
   display: none;
   text-align: center;
   padding: 15px;
@@ -964,7 +964,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form button[type="submit"] {
-  background: #2dc997;
+  background: #ffc107;
   border: 0;
   padding: 10px 24px;
   color: #fff;
