--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  background: url(../img/hero-bg.png) top center;
   background-size: cover;
   position: relative;
 }
@@ -519,7 +519,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-container .icon-box {
   background: #fff;
   background-size: cover;
-  padding: 0 0 30px 0;
+  padding: 0 0 40px 0;
 }
 
 #about .about-container .icon-box .icon {
@@ -560,6 +560,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 5px;
   font-size: 18px;
   text-transform: uppercase;
+  padding-top: 20px;
 }
 
 #about .about-container .icon-box .title a {
