Added feedback message
After sending an email with form you get a friendly feedback message.

--- a/css/style.css
+++ b/css/style.css
@@ -924,8 +924,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #contact .form #sendmessage {
-  color: #ffc107;
-  border: 1px solid #ffc107;
+  color: #2dc997;
+  border: 1px solid #2dc997;
   display: none;
   text-align: center;
   padding: 15px;
