--- a/css/style.css
+++ b/css/style.css
@@ -493,9 +493,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about .about-container .background {
-  min-height: 300px;
+  /* min-height: 300px; */
   background: url(../img/logo_Apresentacao.png) center top no-repeat;
-  margin-bottom: -25px;
+  margin-bottom: -6px;
 }
 
 #about .about-container .content {
